# cargo-registry-possible-bug

./: LICENSE  README.md
api_on_crates_io/: Cargo.toml
api_on_crates_io/src/: api.rs  lib.rs
user_of_that_api/: Cargo.toml
user_of_that_api/src/: lib.rs
user_of_user_of_api/: Cargo.toml
