[package]
name = "user_of_that_api"
version = "0.1.0"
edition = "2021"
description = "testing how package renaming works across different registries"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { package = "api_on_crates_io", version = "0.1.0" }
