[package]
name = "user_of_user_of_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_of_that_api = { version = "0.1.0", registry = "fluence" } # this fails the compilation
# user_of_that_api = { version = "0.1.0-cratesio" } # this works
